--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,7 @@
     package="com.voidcode.diasporawebclient"
     android:versionCode="1"
     android:versionName="1.0"
-    android:installLocation="preferExternal"
-     >
+    android:installLocation="preferExternal">
 
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -17,8 +16,7 @@
         <activity
             android:theme="@android:style/Theme.NoTitleBar"
             android:label="@string/app_name"
-            android:name=".MainActivity"
-            android:screenOrientation="portrait" >
+            android:name=".MainActivity">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -26,18 +24,15 @@
         </activity>
         <activity
             android:theme="@android:style/Theme.NoTitleBar"
-            android:name=".ShareActivity"
-            android:screenOrientation="portrait" >
+            android:name=".ShareActivity">
         </activity>
         <activity
             android:theme="@android:style/Theme.NoTitleBar"
-            android:name=".SettingsActivity"
-            android:screenOrientation="portrait" >
+            android:name=".SettingsActivity">
         </activity>
         <activity
             android:theme="@android:style/Theme.NoTitleBar"
-            android:name=".SetupInternetActivity"
-            android:screenOrientation="portrait" >
+            android:name=".SetupInternetActivity">
         </activity>
         <receiver android:name=".WidgetActivity" android:label="Diaspora-Webclient">
             <intent-filter>
