--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.voidcode.diasporawebclient"
-    android:versionCode="2"
-    android:versionName="1.1"
-    android:installLocation="preferExternal">
+    android:versionCode="3"
+    android:versionName="1.3"
+    android:installLocation="auto">
 
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET"/>
