--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,21 +12,26 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-    
+
         <activity
             android:theme="@android:style/Theme.NoTitleBar"
             android:label="@string/app_name"
             android:name=".MainActivity"
             android:configChanges="orientation">
-            <intent-filter >
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+	            <intent-filter >
+	                <action android:name="android.intent.action.MAIN" />
+	                <category android:name="android.intent.category.LAUNCHER" />
+	            </intent-filter>
         </activity>
         <activity
             android:theme="@android:style/Theme.NoTitleBar"
             android:name=".ShareActivity"
             android:configChanges="orientation">
+	            <intent-filter android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+	    			<action android:name="android.intent.action.SEND" />
+	    			<category android:name="android.intent.category.DEFAULT" />
+	    			<data android:mimeType="text/plain" />
+				</intent-filter>
         </activity>
         <activity
             android:theme="@android:style/Theme.NoTitleBar"
