google translate is now added

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="google-api-translate-java-0.97.jar" sourcepath="google-api-translate-java-0.97.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
