--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Mon Dec 12 10:36:49 CET 2011
+#Fri Dec 16 10:42:37 CET 2011
 eclipse.preferences.version=1
+encoding//assets/donation.html=UTF-8
 encoding//assets/tips.html=UTF-8
