--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="google-api-translate-java-0.97.jar" sourcepath="google-api-translate-java-0.97.jar"/>
+	<classpathentry kind="lib" path="microsoft-translator-java-api-0.4-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="google-api-translate-java-0.97.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
