--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="7"
     android:versionName="1.6">
 
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
@@ -34,7 +34,7 @@
         </activity>
         <activity
             android:theme="@android:style/Theme.NoTitleBar"
-            android:name=".SettingsActivity"
+            android:name=".PodSettingsActivity"
             android:configChanges="orientation">
         </activity>
         <activity
